# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  check_leaks.sh  git_ignore.sh
includes/: colors.h  cub3d.h  keycode.h  macos_keyboard.h  mlx.h
libft/: Makefile  libft.h
libft/inc/: libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_error.c  ft_free_array.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstnew.c  ft_malloc_int_array.c  ft_malloc_x.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putnbr_uns_fd.c  ft_putnchar.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+8 more)
maps/: line.cub  mini.cub  org.cub  ring.cub  square.cub  subject.cub
parsing/: CMakeLists.txt  check.c  get_text_and_color.c  invalid.cub  map.c  parser.c  parser.h  player.c  square.cub  utils.c
sources/: main.c  main_bonus.c
sources/events/: handler_events.c  handler_keyboard.c
sources/parser/: cb_check.c  cb_player.c  cb_setup_texture.c  cb_utils.c  check.c  ft_error.c  ft_lst.c  get_tex_and_color.c  get_text_and_color.c  make_map.c  map.c  parser.c  parsing.c  player.c  utils.c
sources/render/: cb_calculate.c  cb_mlx_pixel_put.c  cb_render_cub.c  cb_render_floor_ceiling.c  cb_render_mini_map.c
sources/rendering/: calculation.c  rendering.c  rendering_minimap.c  setup_textures.c
sources/utils/: cb_handle_events.c  cb_handle_keyboard.c  cb_init_main_struct.c  cb_malloc_x.c  cb_return_error.c  ft_degree_to_ratio.c  get_next_line.c
textures/new/: blue.xpm  brick.xpm  crafting_table_top.xpm  grey.xpm  wood.xpm
textures/new2/: blue2.xpm  brick2.xpm  grey2.xpm  wood2.xpm
